# py_hottyper

./: LICENSE  README.md  pyproject.toml
src/hottyper/: main.py
test/: test_timer.py
